@@ -1,6 +1,7 @@
 libmpdclient 2.23 (not yet released)
 * support MPD protocol 0.24.0
   - allow window for listplaylist and listplaylistinfo
+  - command "playlistlength"
 
 libmpdclient 2.22 (2023/12/22)
 * drop the unmaintained Vala bindings
